Refactor file handling